--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -2,3 +2,60 @@
 #userCard {
     display: none;
 }
+
+.user-box {
+    display: table;
+    margin: auto;
+    background-color: #ddd;
+    border-radius: .35rem;
+}
+
+.user-box img {
+    display: block;
+    margin: auto;
+    width: 100%;
+    max-width: 300px;
+    border-radius: .3rem .3rem 0 0;
+}
+
+.user-box h4 {
+    margin: .5rem 1rem 1rem 1rem;
+}
+
+.user-box ul {
+    padding: 0 1rem 1rem 2rem;
+    margin: 0;
+    font-size: small;
+}
+
+article button {
+    color: white;
+    width: 100%;
+    max-width: 250px;
+    cursor: pointer;
+}
+
+#btnGoogleProfile {
+    background-color: steelblue;
+}
+
+#btnLogout {
+    background-color: orangered;
+}
+
+
+.box {
+    background-color: white;
+    margin-bottom: 1rem;
+    padding: .5rem;
+    border-radius: .35rem;
+    cursor: pointer;
+}
+
+.box:hover {
+    background-color: #eee;
+}
+
+.box h5 {
+    margin: 0 0 .5rem 0;
+}
