--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -96,6 +96,8 @@ header img {
     letter-spacing: .11rem;
 }
 
+/* Formulário de pesquisa no cabeçalho */
+
 .header-search {
     background-color: orange;
     padding: 1rem;
@@ -107,8 +109,21 @@ header img {
     align-items: center;
 }
 
+.header-search form input,
+.header-search form button {
+    padding: .5rem;
+    border: none;
+    background-color: white;
+}
+
 .header-search form input {
     flex-grow: 1;
+    border-radius: .35rem 0 0 .35rem;
+}
+
+.header-search form button {
+    border-radius: 0 .35rem .35rem 0;
+    color: grey;
 }
 
 /* Menu principal (nav) */
@@ -209,6 +224,12 @@ button {
     font-size: inherit;
 }
 
+button {
+    border: none;
+    padding: .35rem 1rem;
+    border-radius: .3rem;
+}
+
 /*
 Responsividade
 Telas de 768px ou mais... 
@@ -232,16 +253,9 @@ Telas de 768px ou mais...
         justify-content: space-between;
     }
 
-    .header-search {}
-
     .header-search form {
-        display: flex;
         margin-left: 1.5rem;
         margin-right: 1.5rem;
-    }
-
-    .header-search form input {
-        flex-grow: 1;
     }
 
 }
@@ -284,4 +298,111 @@ Telas de 425px ou mais...
 #userImg,
 #userIcon {
     display: none;
+}
+
+.validButton {
+    background-color: steelblue;
+}
+
+.invalidButton {
+    background-color: grey;
+}
+
+/* Atividade 3) */
+.authordate {
+    display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .authordate {
+        text-align: right;
+    }
+}
+
+/* Blocos com artigos na aside */
+/*
+
+<div class="aside_block">
+    <h3>Título</h3>
+    <!-- loop -->
+    <div>
+        <h5>Título do artigo</h5>
+        <small>Resumo do artigo</small>
+        <small class="footer">Footer do artigo</small>
+    </div>
+    <!-- end loop -->
+</div>
+
+*/
+
+.aside_block div {
+    background-color: #fff;
+    padding: .5rem;
+    border-radius: .35rem;
+    margin-bottom: 1rem;
+}
+
+.clicked {
+    cursor: pointer;
+}
+
+.clicked:hover {
+    background-color: #eee;
+}
+
+.aside_block h5 {
+    margin: 0;
+}
+
+.aside_block small {
+    display: block;
+    margin-top: .5rem;
+}
+
+.aside_block small.footer {
+    border-top: 1px dotted grey;
+    padding-top: .25rem;
+    font-size: 70%;
+    text-align: right;
+}
+
+/* Lista de ícones de redes sociais */
+
+.social-side {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 1rem;
+}
+
+.social-side a {
+    border-radius: .35rem;
+}
+
+.social-side a:hover {
+    background-color: #eee;
+}
+
+.social-side i {
+    font-size: 2.5rem;
+}
+
+/*
+Responsividade
+Telas de 768px ou mais... 
+*/
+
+@media only screen and (min-width: 768px) {
+
+    /* Lista de ícones de redes sociais */
+    .social-side {
+        justify-content: space-around;
+        padding-bottom: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .social-side i {
+        font-size: 4rem;
+        padding: .25rem;
+    }
+
 }
