--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -56,8 +56,8 @@ a:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: 1024px;
-    /* min-width: 280px; */
+    /* max-width: 1024px; */
+    min-width: 280px;
     /* Centraliza blocos */
     margin: auto;
     /* Sticky footer - Rodapé no finla da página */
@@ -237,7 +237,7 @@ Telas de 768px ou mais...
 
 @media only screen and (min-width: 768px) {
 
-    /* Conteúdo principal */
+
     main {
         flex-direction: row;
     }
@@ -247,7 +247,7 @@ Telas de 768px ou mais...
         max-width: 14rem;
     }
 
-    /* Cabeçalho */
+    
     header {
         flex-direction: row;
         justify-content: space-between;
@@ -258,7 +258,7 @@ Telas de 768px ou mais...
         margin-right: 1.5rem;
     }
 
-}
+} 
 
 /*
 Responsividade
