--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,4 +1,5 @@
 /* Oculta o card do usuário quando a página é carregada */
+
 #userCard {
     display: none;
 }
@@ -11,6 +12,7 @@
 }
 
 .user-box img {
+    background-color: #fff;
     display: block;
     margin: auto;
     width: 100%;
@@ -41,21 +43,4 @@ article button {
 
 #btnLogout {
     background-color: orangered;
-}
-
-
-.box {
-    background-color: white;
-    margin-bottom: 1rem;
-    padding: .5rem;
-    border-radius: .35rem;
-    cursor: pointer;
-}
-
-.box:hover {
-    background-color: #eee;
-}
-
-.box h5 {
-    margin: 0 0 .5rem 0;
 }
