--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -56,7 +56,7 @@ a:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: 1024px;
+    /* max-width: 1024px; */
     /* min-width: 280px; */
     /* Centraliza blocos */
     margin: auto;
